<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuMovie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movie" />
    <item android:id="@+id/menuTvShow"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tvShow" />
    <item android:id="@+id/menuFavorite"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorite" />
</menu>