<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionName"
            android:checked="true"
            android:title="@string/title" />
        <item
            android:id="@+id/actionNewest"
            android:checked="false"
            android:title="@string/newest" />
        <item
            android:id="@+id/actionOldest"
            android:checked="false"
            android:title="@string/oldest" />
    </group>
</menu>