<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/actionShare"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/actionFavorite"
        android:icon="@drawable/ic_baseline_star_selector"
        android:title="@string/favorite"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>